[package]
name = "eremius"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros", "unicase"] }
unicase = "2.6.0"
smallvec = "1.11.1"
bitvec = "1.0.1"

[build-dependencies]
phf = { version = "0.11.1", default-features = false, features = ["unicase"] }
phf_codegen = "0.11.1"
unicase = "2.6.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }